[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/menu/MenuCenterControl.gd" type="Script" id=2]
[ext_resource path="res://sounds/Main Menu Click/rifle.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/Main Menu Hover/hover.wav" type="AudioStream" id=4]
[ext_resource path="res://music/Main Menu Theme/Mensch [ Main Menu ].wav" type="AudioStream" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 140.0
margin_bottom = 180.0
script = ExtResource( 2 )

[node name="StartButton" type="Button" parent="Control"]
margin_left = 20.0
margin_top = 40.0
margin_right = 120.0
margin_bottom = 60.0
text = "Start Game"

[node name="CreaditsButton" type="Button" parent="Control"]
margin_left = 20.0
margin_top = 80.0
margin_right = 120.0
margin_bottom = 100.0
text = "Credits"

[node name="ExitButton" type="Button" parent="Control"]
margin_left = 20.0
margin_top = 120.0
margin_right = 120.0
margin_bottom = 140.0
text = "Exit"

[node name="Click" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource( 3 )

[node name="Hover" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource( 4 )

[node name="Theme" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource( 5 )
[connection signal="button_down" from="Control/StartButton" to="." method="_on_StartButton_button_down"]
[connection signal="button_down" from="Control/CreaditsButton" to="." method="_on_CreaditsButton_button_down"]
[connection signal="button_down" from="Control/ExitButton" to="." method="_on_ExitButton_button_down"]
